--- a/app/settings.html
+++ b/app/settings.html
@@ -1,5 +1,5 @@
 
-{% extends "layouts/main.html" %}
+{% extends "_layouts/main.html" %}
 
 {% set backLink = '/records' %}
 {% set pageHeading = 'Prototype settings' %}
